- fixed issue with inputs on firefox - fixed issue with black bar on side of grid when displayed on bigger screens

--- a/index.scss
+++ b/index.scss
@@ -135,6 +135,8 @@ section#controls {
   max-width: 600px;
   aspect-ratio: 1 / 1;
 
+  border: 1px solid black;
+
   // Grid is generated by JavaScript.
   .grid {
     display: grid;
